<resources>
    <string name="app_name">Secapa Futsal</string>
    <string name="secapa">SECAPA FUTSAL</string>
    <string name="gambar">gambar</string>
    <string name="akun">Akun</string>
    <string name="akunmu">Silahkan Masukkan Akun Anda Untuk Melanjutkan</string>
    <string name="selamatdatang">Selamat Datang</string>
    <string name="atau">Atau</string>
    <string name="google">Masuk Dengan Akun Google</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar Sekarang</string>
    <string name="belum">Belum Punya Akun?</string>
    <string name="nama">Nama</string>
    <string name="email">Gmail</string>
    <string name="keluarakun">Keluar Akun</string>
    <string name="default_web_client_id" translatable="false">68511178621-qsj6rfp4c7l0nguj2pbqo6tjndeutoq2.apps.googleusercontent.com</string>
</resources>
