<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bglogin"
    tools:context=".Login">

    <TextView
        android:id="@+id/txtSelamatDatang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/selamatdatang"
        android:textAlignment="center"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/txtSilahkan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/akunmu"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginBottom="70dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/button_round"
        android:drawableStart="@drawable/ic_search"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="12sp"
        android:text="@string/google" />

    <TextView
        android:id="@+id/txtAtau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:text="@string/atau"
        android:textSize="15sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/viewUsername"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtuser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/viewPassword"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        app:passwordToggleDrawable="@drawable/ic_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnMasuk"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_round"
        android:text="@string/masuk" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txtBelum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/belum"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/txtDaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/daftar"
            android:textColor="@color/white"/>
    </LinearLayout>

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>